src/test/deca/context/valid/method_call.deca
/*
    Description : Appel d'une méthode bien définie

    Résultat : OK 
*/
class A{
    void x(){}
    
    void y(){
        x();
    }
}

